--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "20": "^3.1.9",
     "@heroicons/react": "^2.2.0",
-    "next": "15.4.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.4.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-social-icons": "^6.24.0",
     "react-type-animation": "^3.2.0",
